# common

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  argument_parsing.py  cli.py  cltool.py  command_line_interface.py  command_line_tool.py  configurable_command_line_tool.py  exception.py  exceptions.py  file.py  files.py  general.py  logging.py  logs.py  misc.py  pyproject.toml  testing.py  typing.py  validation.py
tests/: __init__.py  test_validation.py
